# qq_robot

./: Cargo.toml  MyBangumi.rss  README.md  nohup.out
src/: config.rs  main.rs  request_client.rs
src/main_module/: main_module.rs  mod.rs
src/qbittorrent_api/: authentication.rs
src/qq_robot_api/: app_access_token.rs  guilds.rs  message.rs  mod.rs  websocket_api.rs
src/rss/: rss.rs
