[package]
name = "qq_robot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.2" }
tokio = { version = "1.35.0", features = ["full"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"]}
reqwest = { version = "0.11", features = ["json"] }
serde = { verson = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.111" }
chrono = { version = "0.4.31"}
futures-util = { version = "0.3.30" }
rss = { version = "2.0.7" }